--- a/package.json
+++ b/package.json
@@ -10,23 +10,56 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@base-ui/react": "^1.0.0",
+    "@fontsource-variable/figtree": "^5.2.10",
     "@tailwindcss/vite": "^4.1.17",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.561.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.17"
+    "shadcn": "^3.6.2",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@platejs/autoformat": "^52.0.1",
+    "@platejs/basic-nodes": "^52.0.1",
+    "@platejs/basic-styles": "^52.0.1",
+    "@platejs/callout": "^52.0.1",
+    "@platejs/code-block": "^52.0.1",
+    "@platejs/date": "^52.0.1",
+    "@platejs/docx": "^52.0.1",
+    "@platejs/emoji": "^52.0.1",
+    "@platejs/floating": "^52.0.1",
+    "@platejs/indent": "^52.0.1",
+    "@platejs/layout": "^52.0.1",
+    "@platejs/link": "^52.0.1",
+    "@platejs/list": "^52.0.1",
+    "@platejs/markdown": "^52.0.1",
+    "@platejs/math": "^52.0.1",
+    "@platejs/media": "^52.0.1",
+    "@platejs/mention": "^52.0.1",
+    "@platejs/table": "^52.0.1",
+    "@platejs/toc": "^52.0.1",
+    "@platejs/toggle": "^52.0.1",
+    "@types/chrome": "^0.1.32",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "date-fns": "^4.1.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "platejs": "^52.0.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "zustand": "^5.0.9"
   }
 }
