--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,11 +6,14 @@
   "permissions": [
     "storage",
     "activeTab",
-    "scripting"
+    "scripting",
+    "tabs"
   ],
   "action": {
-    "default_popup": "index.html",
     "default_title": "Notyqo - Open Full App"
+  },
+  "background": {
+    "service_worker": "background.js"
   },
   "icons": {
     "16": "vite.svg",
