--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,7 +23,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["src/content/quick-note.tsx"]
+      "js": ["content-script.js"]
     }
   ]
 }
